--- a/terablogger.conf.sample
+++ b/terablogger.conf.sample
@@ -8,6 +8,7 @@
  :title "Example blog"
  :description "Long blog description."
  :author "George W. Bush Jr."
+ :contacts "<a href=\"http://ammywhitehouse.gov\">%s</a>"
  :permalink true
  ;; Input format
  :format "html" ; the only supported
