%base_url% substitution.

--- a/terablogger.conf.sample
+++ b/terablogger.conf.sample
@@ -12,4 +12,6 @@
  :permalink true
  ;; Input format
  :format "html" ; the only supported
- :html-auto-break true}
+ :html-auto-break true
+ :html-base-url true
+ :html-base-url-str "%base_url%"}
