Support different input formats.
Format is detected by file extension.

--- a/terablogger.conf.sample
+++ b/terablogger.conf.sample
@@ -10,8 +10,17 @@
  :author "George W. Bush Jr."
  :contacts "<a href=\"http://ammywhitehouse.gov\">%s</a>"
  :permalink true
- ;; Input format
- :format "html" ; the only supported
+ ;; Input formats
+ ;; 1. HTML
+ :format "html"
  :html-auto-break true
  :html-base-url true
- :html-base-url-str "%base_url%"}
+ :html-base-url-str "%base_url%"
+ ;;
+ ;; ;; 2. Markdown
+ ;; :format "markdown"
+ ;; :markdown-params {}
+ ;;
+ ;; ;; 3. Textile
+ ;; :format "textile"
+}
